--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -10,8 +10,18 @@
 
 body{
   font-family: 'Source Sans Pro', sans-serif;
+  color: white;
 }
 
 .main__content{
+  display: flex;
   height:calc(100vh - 60px);
+}
+.page__control{
+  width: 100%;
+  background-color: #2e2e2e;
+}
+.link{
+  text-decoration: none;
+  color: inherit;
 }
