--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -45,6 +45,9 @@
   .contact__right {
     padding: 0 2rem;
     flex: 1;
+    h3{
+      margin-bottom: 30px;
+    }
     .form__item {
       width: 100%s;
       display: flex;
