--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -35,7 +35,7 @@ footer{
         cursor: pointer;
 
         &:hover{
-            background-color: violet;
+            background-color: #4f4f52;
         }
     }
 }
