--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -15,7 +15,7 @@
             cursor: pointer;
             
             &:hover{
-                background-color: rgb(151, 210, 159);
+                background-color: #1f2428;
             }
             
         }
@@ -34,7 +34,7 @@
             cursor: pointer;
             
             &:hover{
-                background-color: rgb(151, 210, 159);
+                background-color:#1f2428;
             }
             
         }
