--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -8,7 +8,7 @@ footer{
     align-items: center;
     justify-content: space-between;
     font-size: 13px;
-    
+    border-top: 1px solid #191d20;
 
     img{
         width: 15px;
