--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,37 +1,43 @@
-@import '../../sass/index.scss';
+@import "../../sass/index.scss";
 
-.navbar{
-    background-color: #1f2428;
-    height: 30px;
-    padding:0 12px;
+.navbar {
+  background-color: #1f2428;
+  height: 30px;
+  padding: 0 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 13px;
+  border: 1px solid #191d20;
+  .nav__left {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    font-size: 13px;
-    border: 1px solid #191d20;
-    .nav__left{
-        display: flex;
-        align-items: center;
-        flex: 1;
-        column-gap: 15px;
-        img{
-            width: 15px;
-            height: 15px;
-            object-fit: cover;
+    flex: 1;
+    column-gap: 8px;
+    img {
+      width: 15px;
+      height: 15px;
+      object-fit: cover;
+    }
+    .nav__items {
+      display: flex;
+      p {
+        padding: 4px 8px;
+        border-radius: 4px;
+        cursor: pointer;
+        &:hover {
+          background-color: #2e3338;
         }
-        .nav__items{
-            display: flex;
-            column-gap: 15px;
-            cursor: pointer;
-        }
+      }
     }
-    .nav__title{
-        display: flex;
-        flex: 1;
-        justify-content: center;
-    }
-    .nav__right{
-        display: flex;
-        flex: 1;
-    }
+  }
+  .nav__title {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+  }
+  .nav__right {
+    display: flex;
+    flex: 1;
+  }
 }
