--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -28,12 +28,21 @@ body{
   width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #2e2e2e;
+  background-color: #24292e;
 }
 .outlet{
   height: 100%;
   padding: 2rem;
   overflow-x: hidden;
+  position: relative;
+  z-index: 1;
+  .terminal{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 99;
+  }
 }
 .link{
   text-decoration: none;
