--- a/src/components/Terminal/Terminal.scss
+++ b/src/components/Terminal/Terminal.scss
@@ -37,8 +37,10 @@
             height: 100%;
           .left{
             width: 100%;
+            border-right: 2px solid #696767;
             textarea{
                 width: 100%;
+                height: 100%;
                 font-size: 20px;
                 color:rgb(187, 186, 186) ;
                 background: transparent;
@@ -50,7 +52,23 @@
           }
           .right{
             width: 150px;
-            background-color: red;
+            display: flex;
+            flex-direction: column;
+            row-gap: 5px;
+            padding: 10px;
+            span{
+                display: flex;
+                align-items: center;
+                gap: 8px;
+                cursor: pointer;
+                
+                img{
+                    width: 20px;
+                    height: 20px;
+                    object-fit: cover;
+                    filter: invert(100%);
+                }
+            }
           }
         }
     }
