--- a/src/pages/Projects/Projects.scss
+++ b/src/pages/Projects/Projects.scss
@@ -7,10 +7,16 @@ height: 100%;
     }
     .projects__container{
         display: grid;
-        grid-template-columns: repeat(4, minmax(0, 1fr));
-        gap: 32px;
+        grid-template-columns: repeat(5, minmax(0, 1fr));
+        gap: 8px;
 
         .project__card{
+            
+            width: 190px;
+  height: 254px;
+ 
+  background: rgb(236, 236, 236);
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
             display: flex;
             flex-direction: column;
             border-radius: 8px;
@@ -18,13 +24,16 @@ height: 100%;
            
             
             .project__card__header{
-                height: 15px;
+                height: 10px;
                 margin-bottom: 8px;
                 img{
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
                 }
+            }
+            .project__card__body{
+                padding: 4px 8px;
             }
         }
     }
