--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -57,7 +57,7 @@ overflow: hidden;
           top: 0;
           width: 100%;
           height: 100%;
-          background-color: rgb(252, 70, 100);
+          background-color: rgb(85, 56, 212);
           transform: translateX(-100%);
           transition: all 0.3s;
           z-index: -1;
@@ -70,7 +70,7 @@ overflow: hidden;
         height: 100%;
         display: inline-block;
         border-radius: 4px;
-        background-color: #3d405b;
+        background-color: #581a5f;
         border: none;
         color: #ffffff;
         text-align: center;
