--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -20,7 +20,7 @@ overflow: hidden;
       font-weight: 900;
       margin:-12px 0;
      &:nth-child(20){
-      color: red;
+      color: #08dfce;
      }
     }
     h3 {
@@ -57,7 +57,7 @@ overflow: hidden;
           top: 0;
           width: 100%;
           height: 100%;
-          background-color: rgb(85, 56, 212);
+          background-color: rgb(119, 14, 133);
           transform: translateX(-100%);
           transition: all 0.3s;
           z-index: -1;
@@ -70,7 +70,7 @@ overflow: hidden;
         height: 100%;
         display: inline-block;
         border-radius: 4px;
-        background-color: #581a5f;
+      background-color:rgb(85, 56, 212) ;
         border: none;
         color: #ffffff;
         text-align: center;
