--- a/src/components/Terminal/Terminal.scss
+++ b/src/components/Terminal/Terminal.scss
@@ -25,8 +25,18 @@
             }
             .right{
                 display: flex;
-                gap: 15px;
-                cursor: pointer;
+                gap: 8px;
+                span{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    padding: 2px;
+                    border-radius: 8px;
+                    cursor: pointer;
+                    &:hover{
+                        background: #696767;
+                    }
+                }
             }
             
         }
