windows 10 page TRY

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -20,7 +20,10 @@ overflow: hidden;
       font-weight: 900;
       margin:-12px 0;
      &:nth-child(20){
-      color: #08dfce;
+      color: #CB05E8;
+     }
+     &:nth-child(8){
+      color: #27E8B2;
      }
     }
     h3 {
