--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -22,8 +22,9 @@ overflow: hidden;
      &:nth-child(20){
       color: #CB05E8;
      }
-     &:nth-child(8){
-      color: #27E8B2;
+     
+     &:last-child{
+      color: yellow;
      }
     }
     h3 {
