--- a/src/pages/Window/Window.scss
+++ b/src/pages/Window/Window.scss
@@ -1,5 +1,7 @@
 .window__screen{
     height: 100vh;
+    position: relative;
+  
     img{
         width: 100%;
         height:calc(100vh - 40px);
