--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -4,15 +4,16 @@
   height: 100%;
   display: flex;
   align-items: center;
-position: relative;
+
 overflow: hidden;
   font-family: "JetBrains Mono", monospace;
-  .mouse__trail{
-    position: absolute;
-    inset: 0;
-    z-index: -15;
-    
-  }
+ #canvas{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  z-index: -2;
+ }
   .home__title {
     h1 {
       display: inline-block;
