about motion upd

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -22,11 +22,10 @@ overflow: hidden;
       margin:-12px 0;
      &:nth-child(20){
       color: #CB05E8;
+      font-size: 85px;
      }
      
-     &:last-child{
-      color: yellow;
-     }
+    
     }
     h3 {
       color: #959595;
